--- a/01_serving_a_model/Dockerfile
+++ b/01_serving_a_model/Dockerfile
@@ -4,8 +4,10 @@ EXPOSE 8000
 WORKDIR /usr/src/app
 
 RUN pip install pipenv
+
+COPY ./Pipfile* .
+RUN pipenv install --deploy
 COPY ./main.py .
-RUN pipenv install --system --deploy
 
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["pipenv", "run","uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
