--- a/01_serving_a_model/Makefile
+++ b/01_serving_a_model/Makefile
@@ -7,8 +7,8 @@ build:
 #	docker buildx build --platform linux/amd64 . -t basic-model-serve
 
 run:
-	docker run --rm -d -p 8000:8000 basic-model-serve
+	docker run --name basic-model-serve --rm -d -p 8000:8000 basic-model-serve
 
 #only works if you only have one container running
 kill:
-	docker kill $(docker ps -a -q)
+	docker kill basic-model-serve
