Log model from train.py and fetch at the startup of serve.py

--- a/02_tracking_a_model/Makefile
+++ b/02_tracking_a_model/Makefile
@@ -1,8 +1,14 @@
 build:
 	docker compose build
 
-run:
+up:
 	docker compose up
 
 down:
 	docker compose down
+
+train:
+	pipenv run python train.py
+
+serve:
+	pipenv run uvicorn serve:app --reload
