--- a/02_tracking_a_model/mlflow/Dockerfile
+++ b/02_tracking_a_model/mlflow/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3.10
 
 EXPOSE 5000
 
-RUN pip install mlflow
+RUN pip install mlflow psycopg2
 
-CMD ["mlflow", "ui", "--host", "0.0.0.0"]
+CMD ["mlflow", "server", "--host", "0.0.0.0", "--backend-store-uri", "postgresql://mlflow:mlflow@db:5432", "--default-artifact-root", "./artifacts"]
